# crafter

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
clients/fastmcp_client/: client.py
rft/: __init__.py  graders.py  log_to_rft_dataset.py
scripts/: crawl_cortex_docs.py  inspect_chroma_examples.py  inventory_correlation_rules.py  inventory_dashboard.py  inventory_integrations.py  inventory_modeling_rules.py  inventory_parsing_rules.py  inventory_playbooks.py  inventory_scripts.py  inventory_xql_schema.py  prepare_examples_gemini.py  prepare_examples_openai.py  seed_examples_repository.py
src/cortex_mcp/: __init__.py  config.py  logging_utils.py  main.py
src/cortex_mcp/domain/: __init__.py  authentication.py  content_testing_service.py  curation_service.py  docs_client.py  examples_repository.py  fake_data_service.py  sanitization.py  xql_design_service.py  xql_reference.py  xsiam_client.py
src/cortex_mcp/domain/models/: __init__.py  docs.py  examples.py  validation.py
src/cortex_mcp/mcp/: __init__.py  prompts.py  resources.py  tools.py
tests/: __init__.py  conftest.py  test_content_testing_service.py  test_docs_client.py  test_docs_client_integration.py  test_examples_repository.py  test_examples_repository_integration.py  test_fake_data_service.py  test_graders.py  test_mcp_tools_design.py  test_mcp_tools_testing_curation.py  test_xsiam_client.py
